パスの修正

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
-  <script src="/textchat/config.js"></script>
+  <script src="/config.js"></script>
 
   <!-- <script> -->
   <script type="text/javascript">
