--- a/login.html
+++ b/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,14 +23,14 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/3.5.2/firebase-ui-auth__ja.js"></script>
-  <script src="/textchat/config.js"></script>
+  <script src="/config.js"></script>
 
   <script>
     
     // Firebase UIの設定
     var uiConfig = {
         // ログイン完了時のリダイレクト先
-        signInSuccessUrl: '/textchat/index.html',
+        signInSuccessUrl: '/index.html',
 
         // 利用する認証機能
         signInOptions: [
