--- a/home.html
+++ b/home.html
@@ -11,22 +11,21 @@
 </head>
 
 <body>
-
-  <h3>...Please wait</h3>
-  <h1>Text Chat</h1>
-
-  <div class="container">
-    <div class="chat-area">
-      <div id="uname"></div>
-      <div id="messages"></div>
-    </div>
-    <div class="message-area">
-      <form autocomplete="off">
-        <div class="message-area-text">
-          <textarea type="text" id="message" rows="4" cols="40" placeholder="メッセージを入力"
-            onkeydown="pushed(event)"></textarea>
-        </div>
-      </form>
+  <div class="main-contents">
+    <h1>Text Chat</h1>
+    <div class="container">
+      <div class="chat-area">
+        <div id="messageList"></div>
+      </div>
+      <div class="message-area">
+        <form autocomplete="off">
+          <div class="message-area-text">
+            <textarea type="text" id="inputMessage" rows="4" cols="40" placeholder="メッセージを入力"
+              onkeydown="pushed(event)"></textarea>
+          </div>
+          <button type="submit" name="" value="ボタン">送信</button>
+        </form>
+      </div>
     </div>
   </div>
 
@@ -38,118 +37,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-firestore.js"></script>
   <script src="./js/config.js"></script>
-
-  <!-- <script> -->
-  <script type="text/javascript">
-
-    var uid = "";
-    var uname = "";
-
-    // 現在ログインしているユーザを取得する
-    firebase.auth().onAuthStateChanged((user) => {
-      let h3 = document.querySelector('h3');
-
-      if (user) {
-
-        uid = user.uid;
-        uname = user.displayName;
-
-        h3.innerHTML = `Login Compleat！<br>` +
-          `ログインユーザ：${uname}<br>` +
-          `ユーザID：(${user.uid})`;
-        console.log(user);
-      }
-      else {
-        h3.innerText = 'Not Login';
-      }
-    });
-
-    // firebaseとデータ入れにmessagesという名前を付けて使えるようにする
-    const db = firebase.firestore();
-    const collection = db.collection('messages');
-
-    //formとmessage要素の取得
-    const message = document.getElementById('message');
-    const form = document.querySelector('form');
-    const messages = document.getElementById('messages');
-    const timestamp = document.getElementById('created');
-
-    collection.orderBy('created').onSnapshot(snapshot => {
-      snapshot.docChanges().forEach(change => {
-        if (change.type == 'added') {
-          const li = document.createElement('p');
-          const name = document.createElement('p');
-          const frame = document.createElement('div');
-          const body = document.createElement('div');
-          li.textContent = change.doc.data().message;
-          frame.appendChild(li);
-          // メッセージを投稿したユーザIDとログインユーザIDを比較
-          if (change.doc.data().id === uid) {
-            // 自分が送ったメッセージ
-            frame.classList.add('light_message');
-            name.classList.add('light_uname');
-            name.textContent = uname;
-            body.appendChild(name);
-          } else {
-            // 相手が送ったメッセージ
-            frame.classList.add('left_message');
-          }
-          body.appendChild(frame);
-          messages.appendChild(body);
-
-          console.log(change.doc.data().timestamp);
-        }
-      });
-    });
-
-    //formの投稿イベント、投稿されたらページ遷移しないように
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-    })
-
-    function pushed(e) {
-
-      console.log(e);
-
-      //メッセージが空だった時にそれ以降の処理をしない
-      const val = message.value.trim();
-      if (val == "") {
-        return;
-      }
-
-      // Ctrl+Enterで投稿
-      if (e.code === 'Enter' && e.ctrlKey) {
-        //console.log("pass")
-
-        //フォームを空にしてフォーカスをあてる（処理成功の場合にあったものを移動）
-        message.value = '';
-        message.focus();
-
-        //データ入れにデータを保存してIDをふる
-        collection.add({
-          message: val,
-          created: firebase.firestore.FieldValue.serverTimestamp(),
-          id: uid
-        })
-          .then(doc => {
-            //処理が成功した場合はコンソールにIDを表示し
-            //messageの中身は空にし、フォームにフォーカスを当てる
-            console.log(`${doc.id} added!`);
-          })
-          .catch(error => {
-            //処理が失敗した場合は、コンソールにエラーメッセージを表示
-            console.log(error);
-          });
-      } else {
-        return;
-      }
-    };
-
-    //ページ読み込み時にフォーカスをあてる
-    message.focus();
-
-  </script>
-
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
